--- a/blaze.html
+++ b/blaze.html
@@ -2,12 +2,81 @@
 <html>
 <head>
     <title>Blaze Website</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #0a0a0a;
+    color: white;
+}
+
+/* paste all the CSS from style.css here */
+.hero {
+    text-align: center;
+    padding: 120px 20px;
+    background: linear-gradient(45deg, #ff0057, #6a00ff);
+}
+
+.hero h1 {
+    font-size: 50px;
+    margin: 0;
+    text-shadow: 0 0 20px #fff;
+}
+
+.hero p {
+    margin: 20px 0;
+    font-size: 18px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 12px 30px;
+    background-color: black;
+    color: #00ffff;
+    text-decoration: none;
+    border: 2px solid #00ffff;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    background-color: #00ffff;
+    color: black;
+}
+
+section {
+    padding: 60px 20px;
+    text-align: center;
+}
+
+.games {
+    background-color: #111;
+}
+
+.game-box {
+    background: #1f1f1f;
+    margin: 15px auto;
+    padding: 20px;
+    width: 70%;
+    border-radius: 8px;
+    border: 1px solid #333;
+}
+
+.join {
+    background: linear-gradient(45deg, #6a00ff, #ff0057);
+}
+
+footer {
+    background: black;
+    padding: 20px;
+}
+</style>
 </head>
 <body>
     <h1>Welcome to My World 🔥</h1>
     <p>Blaze is above all</p>
 </body>
 </html>
+
 
 
