--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@ body {
 /* paste all the CSS from style.css here */
 .hero {
     text-align: center;
-    padding: 120px 20px;
-    background: linear-gradient(45deg, #ff0057, #6a00ff);
+    padding: 150px 20px;
+    background: 
+        linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
+        url('bg.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 .hero h1 {
@@ -77,6 +81,7 @@ footer {
     <p>Blaze is above all</p>
 </body>
 </html>
+
 
 
 
